Version: 0.0.14
Date: 2020.08.07
  Features:
    - Added functions `assign_deferred_icons`, `rescale_minimachine`
  Changes:
    - Moved sprites, icons and code for oil refineries into this mod
    - Revised icon assignment to optionally define `pictures`
    - Increased scope of `create_icons_from_list` to handle all item/technology icon setups
---------------------------------------------------------------------------------------------------
Version: 0.0.13
Date: 2020.08.03
  Changes:
    - Modified function `create_icons_from_list` to support inputs-defined icon deferral
---------------------------------------------------------------------------------------------------
Version: 0.0.12
Date: 2020.08.03
  Features:
    - Added function `clear_icon_specification`
    - Added function `create_icons_from_list`
  Changes:
    - Modifed function `store_icon` to handle data-updates as well
---------------------------------------------------------------------------------------------------
Version: 0.0.11
Date: 2020.07.15
  Changes:
    - Revised tier label icons, 32px is now more clear
    - Revised how equipment icon backgrounds are handled
    - Added support for a 6th tier, currently disabled
    - Enhanced mod setting names and descriptions with rich text; tier labels are now displayed next to their respective option
    - Renamed `ingredients`-based tier mapping to `progression`-based tier mapping, and improved the clarity of the setting description
    - Removed files and code relating to target drone utility
---------------------------------------------------------------------------------------------------
Version: 0.0.10
Date: 2020.07.13
  Features:
    - Added customized version of `make_4way_animation_from_spritesheet`
---------------------------------------------------------------------------------------------------
Version: 0.0.9
Date: 2020.07.11
  Changes:
    - Code improvements; ensured variables are locally defined