@@ -33,9 +33,9 @@ reskins-lib-custom-colors-tier-6=Choose color for Tier 6.\n\n[color=#9cdcfe]Defa
 [string-mod-setting]
 reskins-lib-tier-mapping-progression-map=Progression
 reskins-lib-tier-mapping-name-map=Name
-reskins-lib-icon-tier-labeling-style-dots=[img=item.reskins-lib-dots-tier-label]Dots
-reskins-lib-icon-tier-labeling-style-half-circle=[img=item.reskins-lib-half-circle-tier-label]Half-circles
-reskins-lib-icon-tier-labeling-style-rectangle=[img=item.reskins-lib-rectangle-tier-label]Rectangles
-reskins-lib-icon-tier-labeling-style-rounded-half-circle=[img=item.reskins-lib-rounded-half-circle-tier-label]Rounded half-circles
-reskins-lib-icon-tier-labeling-style-rounded-rectangle=[img=item.reskins-lib-rounded-rectangle-tier-label]Rounded rectangles
-reskins-lib-icon-tier-labeling-style-teardrop=[img=item.reskins-lib-teardrop-tier-label]Teardrops
+reskins-lib-icon-tier-labeling-style-dots=[img=reskins-lib-dots-tier-label]Dots
+reskins-lib-icon-tier-labeling-style-half-circle=[img=reskins-lib-half-circle-tier-label]Half-circles
+reskins-lib-icon-tier-labeling-style-rectangle=[img=reskins-lib-rectangle-tier-label]Rectangles
+reskins-lib-icon-tier-labeling-style-rounded-half-circle=[img=reskins-lib-rounded-half-circle-tier-label]Rounded half-circles
+reskins-lib-icon-tier-labeling-style-rounded-rectangle=[img=reskins-lib-rounded-rectangle-tier-label]Rounded rectangles
+reskins-lib-icon-tier-labeling-style-teardrop=[img=reskins-lib-teardrop-tier-label]Teardrops
